--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "server": "nodemon index.js"
   },
   "author": "",
@@ -17,5 +18,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  }
+  },
+  "keywords": []
 }
